# solana-program-edlincoln

./: README.md
anchor_project/: package-lock.json
anchor_project/donate_crypto/: Anchor.toml  id.json
anchor_project/donate_crypto/programs/donate_crypto/: Cargo.toml
anchor_project/donate_crypto/programs/donate_crypto/src/: lib.rs
anchor_project/donate_crypto/tests/: donate_crypto.ts
frontend/donate-crypto-frontend/src/components/: DonateCrypto.tsx  donate_crypto.json  donate_crypto.ts
frontend/donate-crypto-frontend/src/views/basics/: index.tsx
